Fix more contrast issues

--- a/packages/githublight/style/index.css
+++ b/packages/githublight/style/index.css
@@ -98,4 +98,29 @@ pre {
   background-color: var(--gh-light-white);
 }
 
+/* --------------------------------------
+/* Change menu item style
+-----------------------------------------*/
+.lm-Menu-item:hover[data-type='command'] {
+  background: var(--gh-light-gray5);
+  color: var(--gh-light-white);
+}
+
+.lm-Menu-item:hover[data-type='submenu'] {
+  background: var(--gh-light-gray5);
+  color: var(--gh-light-white);
+}
+
+.lm-Menu-item[data-type='separator'] > div::after {
+  border-top: var(--jp-border-width) solid var(--gh-light-gray5);
+}
+
+.jp-switch-track {
+  background: var(--gh-light-gray5);
+}
+
+.jp-switch-track::before {
+  color: var(--gh-light-white);
+}
+
 /*# sourceMappingURL=index.css.map */
